k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homework

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: homework
  labels:
    app: myapp
spec:
  replicas: 2
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: sp357468/myapp
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
