k8s/service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homework

---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: homework
spec:
  selector:
    app: myapp
  ports:
    - port: 8000
      name: port-8000
      targetPort: 8000
  type: ClusterIP
